--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,29 @@ version '2.0'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.7
 
 repositories {
     mavenCentral()
 }
-
+jar {
+    manifest {
+        attributes 'Main-Class': 'cn.j1angvei.CSATK'
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    //test
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
+    //gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    //apache commons
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    //rxjava
+    compile group: 'io.reactivex', name: 'rxjava', version: '1.2.1'
+
 }
