--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ jar {
 }
 dependencies {
     //test
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
+//    testCompile group: 'junit', name: 'junit', version: '4.12'
+//    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
     //gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     //apache commons
