differentiate raw reads suffix fastq fq

--- a/config/config.json
+++ b/config/config.json
@@ -59,7 +59,8 @@
       "log",
       "output",
       "script",
-      "software"
+      "software",
+      "lib"
     ],
     "out": [
       "index_genome",
