--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ version '2-170301'
 apply plugin: 'java'
 
 sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 repositories {
     mavenCentral()
@@ -17,15 +18,16 @@ jar {
     }
 }
 dependencies {
-    //test
-//    testCompile group: 'junit', name: 'junit', version: '4.12'
-//    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
     //gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     //apache commons
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
-    //rxjava
-    compile group: 'io.reactivex', name: 'rxjava', version: '1.2.1'
+    //okhttp
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.6.0'
+    //retrofit
+    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.2.0'
+    //converter of retrofit
+    compile group: 'com.squareup.retrofit2', name: 'converter-scalars', version: '2.2.0'
 
 }
