--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -69,23 +69,27 @@
       "software"
     ],
     "out": [
-      "01.index_genome",
-      "02.qc_raw",
-      "03.trim",
-      "04.qc_clean",
-      "05.parse_zip",
-      "06.alignment",
-      "07.bam_converted",
-      "08.bam_sorted",
-      "09.qc_alignment",
-      "10.bam_rmdup",
-      "11.bam_unique",
-      "12.peak_calling",
-      "13.peak_annotation",
-      "14.motifs_homer",
-      "15.go_panther",
-      "16.pathway_panther",
-      "17.summary"
+      "1_01.index_genome",
+      "2_01.qc_raw",
+      "2_02.trim",
+      "2_03.qc_clean",
+      "2_04.parse_zip",
+      "3_01.alignment",
+      "3_02.bam_converted",
+      "3_03.bam_sorted",
+      "3_04.qc_alignment",
+      "4_01.bam_rmdup",
+      "4_02.bam_unique",
+      "4_03.peak_calling",
+      "5_01.motifs_homer",
+      "6_01.peak_annotation",
+      "7_01.gene_list",
+      "7_02.go_pathway",
+      "8_01.bam_stat",
+      "8_02.peak_stat",
+      "8_03.anno_stat",
+      "8_04.diff_stat",
+      "9_01.summary"
     ]
   }
 }
