parse QC zip file and store it in JSON format

--- a/config/config.json
+++ b/config/config.json
@@ -69,23 +69,27 @@
       "software"
     ],
     "out": [
-      "01.index_genome",
-      "02.qc_raw",
-      "03.trim",
-      "04.qc_clean",
-      "05.parse_zip",
-      "06.alignment",
-      "07.bam_converted",
-      "08.bam_sorted",
-      "09.qc_alignment",
-      "10.bam_rmdup",
-      "11.bam_unique",
-      "12.peak_calling",
-      "13.peak_annotation",
-      "14.motifs_homer",
-      "15.gene_list",
-      "16.go_pathway",
-      "17.summary"
+      "1_1.index_genome",
+      "2_1.qc_raw",
+      "2_2.parse_zip",
+      "2_3.trim",
+      "2_4.qc_clean",
+      "3_1.alignment",
+      "3_2.bam_converted",
+      "3_3.bam_sorted",
+      "3_4.qc_alignment",
+      "4_1.bam_rmdup",
+      "4_2.bam_unique",
+      "4_3.peak_calling",
+      "5_1.motifs_homer",
+      "6_1.peak_annotation",
+      "7_1.gene_list",
+      "7_2.go_pathway",
+      "8_1.bam_stat",
+      "8_2.peak_stat",
+      "8_3.anno_stat",
+      "8_4.diff_stat",
+      "9_1.summary"
     ]
   }
 }
