--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'j1angvei'
-version '170407'
+version '170408'
 
 apply plugin: 'java'
 
@@ -20,6 +20,7 @@ jar {
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.6.0'
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.2.0'
