--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,10 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.6.0'
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.2.0'
     compile group: 'com.squareup.retrofit2', name: 'converter-scalars', version: '2.2.0'
+    compile group: 'org.thymeleaf', name: 'thymeleaf-spring3', version: '3.0.5.RELEASE'
 }
