--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,7 @@ dependencies {
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.6.0'
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.2.0'
     compile group: 'com.squareup.retrofit2', name: 'converter-scalars', version: '2.2.0'
-    compile group: 'org.thymeleaf', name: 'thymeleaf-spring3', version: '3.0.5.RELEASE'
+    compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.5.RELEASE'
+    compile group: 'org.slf4j', name: 'slf4j-nop', version: '1.6.6'
+
 }
