--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -4,5 +4,6 @@
   "perl": "perl",
   "thread": 10,
   "mapping_quality": 30,
-  "call_with_control": false
+  "call_with_control": false,
+  "exp_thread": 5
 }
